# docs/swagger.json
@@ -401,7 +401,12 @@
         },
         "/posts": {
             "get": {
-                "description": "get all saved post",
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "get all my posts",
                 "consumes": [
                     "application/json"
                 ],
@@ -409,14 +414,26 @@
                     "application/json"
                 ],
                 "tags": [
-                    "saved_post"
+                    "post"
                 ],
-                "summary": "GetAll",
+                "summary": "GetMe",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.ResponseList"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseStatus"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseStatus"
                         }
                     },
                     "500": {
@@ -661,6 +678,38 @@
             }
         },
         "/savedposts": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "get all saved post",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "saved_post"
+                ],
+                "summary": "GetAll",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseList"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseStatus"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
